# eeg_sync

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  environment.yml  llms.txt  pyproject.toml  requirements.txt  session_config.json  sync_eeg_vid.py
.github/workflows/: ci.yml
docs/: CLOCK_DRIFT.md  COLLEAGUE_QUICKSTART.md  COLLEAGUE_VIDEO_COMPRESSION.md  GETTING_STARTED.md  HOW_TO_USE_SYNC.md  INPUTS.md  OUTPUTS.md  PIPELINE.md  PORTAL_PUBLIC_ACCESS.md  PORTAL_ROADMAP.md  TUTORIAL_POSE_EEG.md  analysis-window-inference_260514.md  portal-iteration-compressor_260514.md
gaze_analysis/: __init__.py  config.py  gaze_schema.py  gazelle_runner.py  head_bbox.py  plotting.py  synchrony.py
portal/: __init__.py  app.py  jobs.py
scripts/: compress_videos_for_portal.py
sync_eeg_vid/: __init__.py  cli.py  eeg_io.py  plotting.py  sync_pipeline.py  util.py  viewer.py
templates/: README.md  exclusion_windows.example.csv  segment_timings.example.csv  session_config.example.json
tests/: test_colleague_video_compressor.py  test_gaze_analysis_config.py  test_gaze_analysis_head_bbox.py  test_gaze_analysis_synchrony.py  test_gaze_metrics.py  test_portal_jobs.py  test_pose_metrics.py  test_sam3d_cpu_patches.py  test_sync_eeg_vid.py  test_track_annotator.py  test_track_filter.py  test_video_analysis_interpolate.py  test_video_analysis_smooth.py  test_video_analysis_visualize_pose_3d.py  test_video_analysis_visualize_pose_tracks.py  test_video_inference_device.py  test_video_inference_frames.py  test_video_inference_pipeline.py  test_video_inference_rapid_compress.py  test_video_inference_rtmlib_runner.py  test_video_inference_schema.py  test_video_inference_tracking.py  test_video_inference_ultralytics_runner.py
tests/fixtures/video_inference/mock_session/: manifest.json  pose_3d.csv  tracks_2d.csv
video_analysis/: __init__.py  gaze_metrics.py  gaze_snapshots.py  interpolate.py  pose_metrics.py  temporal_smooth.py  track_annotator.py  track_correction.py  track_filter.py  visualize_pose_3d.py  visualize_pose_tracks.py
video_inference/: OUTPUT_SCHEMA.md  README.md  __init__.py  compress.py  device.py  frames.py  pipeline.py  rapid_compress.py  rtmlib_runner.py  sam3d_runner.py  schema.py  tracking.py  ultralytics_runner.py
