[project]
name = "eeg-video-sync"
version = "1.0.0"
description = "ULTRA-FAST EEG-video synchronization tool for OpenBCI and GoPro recordings"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
video = [
    "ultralytics>=8.3.0",
    "supervision>=0.21.0",
]

[project.scripts]
eeg-sync = "sync_eeg_vid.cli:main"
video-infer-sam3d = "video_inference.sam3d_runner:main"
video-infer-ultralytics = "video_inference.ultralytics_runner:main"
video-infer = "video_inference.pipeline:main"
video-compress-rapid = "video_inference.rapid_compress:main"
video-interpolate = "video_analysis.interpolate:main"
video-visualize = "video_analysis.visualize_pose_tracks:main"
video-smooth = "video_analysis.temporal_smooth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/felipeparodi/eeg_sync"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["sync_eeg_vid", "video_inference", "video_analysis"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true
